resolved h2 from displaying wrong font size

--- a/css/main.scss
+++ b/css/main.scss
@@ -237,7 +237,7 @@ body>section{
   }
 
   h2{
-    font-size: 1.2em;
+    font-size: 1.5em;
     border-radius: 4px 4px 0 0;
     margin: 1.8rem 1rem 1rem;
     margin-top: 1.8em;
